--- a/doc/tree.css
+++ b/doc/tree.css
@@ -36,7 +36,12 @@ div.text {
 	 color: black;
 	 border-bottom: 0px;
 }
+div.filename {
+	 margin-left: 200px;
+	 margin-bottom: 1ex;
+}
 pre {
+	 margin-left: 120px;
 	 font-size: smaller;
 	 padding: 1ex;
 	 border: 1px solid #8080e0;
