--- a/doc/tree.css
+++ b/doc/tree.css
@@ -3,42 +3,69 @@ body {
 	 font: 10pt "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, sans-serif;
 }
 div#container {
-	 margin: auto;
-	 width: 800px;
-/*	 background: #dfe4ea; */
+	 min-width: 700px;
+	 margin-left: 20px;
+	 margin-right: 20px;
+	 margin-top: 20px;
+	 margin-bottom: 30px;
+	 background: #f0f0f0;
+	 -moz-border-radius: 5px;
+	 -webkit-border-radius: 5px;
+	 -moz-box-shadow: 1px 1px 9px #888;
+	 padding: 5px 15px 5px 15px;
 }
 div#titletxt {
-	 margin: 30px 0 30px 240px;
-	 height: 120px;
+	 margin: -150px 0 30px 240px;
+	 height: 70px;
 }
-#title img {
-    width: 800px;
-	 margin: 0 0 -160px 0;
-	 border-bottom: 2px solid white;
+div#filler {
+	 width: 100%;
+	 height: 160px;
+	 background: url("filler.png");
+	 padding: 0;
+	 margin: 0;
+	 margin-top: 5px;
+	 -moz-box-shadow: 1px 1px 5px #888;
+}
+img#treeimg {
+	 margin-top: 0;
+}
+
+/* Donations */
+
+form#donate {
+	 text-align: center;
+	 margin-top: 1ex;
+	 margin-bottom: 1ex;
+}
+
+/* Layout containers */
+
+div#linkbar {
+	 margin-right: 135px;
+	 display: inline;
+}
+div#main {
+	 margin-right: 135px;
+	 display: inline;
 }
 div#sidebar {
+	 margin-top: 16px;
 	 float: right;
+	 display: inline;
 	 width: 125px;	 
+	 margin-left: 10px;
 }
-div#topad {
-	 margin: auto;
-	 margin-bottom: 10px;
-	 margin-top: 0;
-	 width: 728px;
+div#flush {
+	 clear: both;
 }
-h2 {
-	 width: 650px;
-	 margin: 2ex 0 2ex 0;
-    border-bottom: 1px solid #7070d0;
-}
-div.text {
-	 margin-left: 120px;
-	 margin-bottom: 2ex;
-	 width: 540px;
-}
+
+
+/* Title color/style */
+
 #title h1 {
     font-size: 30px;
-	 color: black;
+	 color: #b00000;
 }
 #title h2 {
     font-size: 11pt;
@@ -46,14 +73,94 @@ div.text {
 	 color: black;
 	 border-bottom: 0px;
 }
+
+/* Menu */
+
+ul#menubar {
+	 margin-top: 0px;
+	 margin-bottom: 35px;
+	 margin-right: 2ex;
+	 text-align: right;
+}
+
+#menubar li {
+	 display: inline;
+	 background: #b00000;
+	 color: white;
+	 font-weight: bold;
+	 padding: .5ex 1ex .5ex 1ex;
+	 -moz-border-radius: 2px;
+	 -webkit-border-radius: 2px;
+	 -moz-box-shadow: 1px 1px 9px #888;
+}
+#menubar li:hover {
+	 background: #009000;
+	 -moz-border-radius: 2px;
+	 -webkit-border-radius: 2px;
+	 -moz-box-shadow: 1px 1px 6px #888;	 
+}
+
+#menubar a {
+	 text-decoration: none;
+	 color: white;
+}
+
+/* Main color/style */
+
+div#share {
+	 position: absolute;
+	 right: 50px;
+	 top: 36px;
+}
+
+#main h2 {
+	 margin-top: 2ex;
+	 margin-right: 135px;
+	 display: block;
+	 background: #b00000;
+	 color: white;
+	 padding-left: 1ex;
+	 -moz-border-radius: 2px;
+	 -webkit-border-radius: 2px;
+	 -moz-box-shadow: 1px 1px 9px #888;
+}
+div.text {
+	 margin-left: 120px;
+	 margin-bottom: 2ex;
+	 margin-right: 145px;
+}
+div.license {
+	 margin-left: 140px;
+	 margin-bottom: 2ex;
+	 margin-right: 155px;
+}
 div.filename {
 	 margin-left: 200px;
 	 margin-bottom: 1ex;
 }
-pre {
-	 margin-left: 120px;
-	 font-size: smaller;
+img.structure {
+	 margin-top: 1ex;
+	 margin-bottom: 1ex;
+	 margin-left: 3ex;
+}
+dd {
+	 margin-bottom: 2ex;
+}
+
+img {
+	 border-style: none;
+}
+
+/* Code listing */
+
+div.code {
+	 margin: 1ex;
+	 width: 90%;
+	 border: dotted 1px black;
+	 background: #f8f8f8;
+	 font-size: 8pt;
 	 padding: 1ex;
-	 border: 1px solid #8080e0;
-	 width: 500px;
+}
+.code pre { 
+	 white-space: pre-wrap;
 }
